# ITAIKO-firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SERIAL_CONFIG.md  check_usio_ident.py
.claude/: settings.local.json
.github/workflows/: pico build.yml
include/: GlobalConfiguration.h  tusb_config.h
include/peripherals/: Display.h  Drum.h  StatusLed.h
include/usb/: device_driver.h
include/usb/device/hid/: keyboard_driver.h  ps3_driver.h  ps4_driver.h  switch_driver.h
include/utils/: BootLed.h  BootMacro.h  BootModeSelect.h  Edition.h  InputReport.h  MacroStore.h  Menu.h  PS4AuthProvider.h  RollBoost.h  SerialConfig.h  SettingsStore.h
src/: main.cpp
src/peripherals/: Display.cpp  Drum.cpp  StatusLed.cpp
src/usb/: device_driver.c
src/usb/device/hid/: common.c  keyboard_driver.c  ps3_driver.c  ps4_driver.c  switch_driver.c
src/utils/: BootLed.cpp  BootMacro.cpp  BootModeSelect.cpp  Edition.cpp  InputReport.cpp  MacroStore.cpp  Menu.cpp  PS4AuthProvider.cpp  SerialConfig.cpp  SettingsStore.cpp
tests/ps4_auth/: setup.sh  test_ps4_auth.py
tools/i2c_debug_bridge/itaiko_side/: I2cDebugLog.cpp  I2cDebugLog.h
tools/i2c_debug_bridge/pico_sdk/: CMakeLists.txt  main.c
